# dama-rs

./: Cargo.toml  Makefile  README.md  dama.desktop  dama.json  example.json  example.yml
src/: conversions.rs  helper.rs  main.rs  structs.rs  traits.rs  ui_builder.rs  watch.rs
src/traits/: mod.rs
