[package]
name = "dama"
version = "0.1.0"
authors = ["Andrea Piseri <andrea.piseri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9.0", features = ["v3_16"]}
gio = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json= "1.0"
